{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 43,
  "lineage": "4f66008b-641b-c1b4-1048-b69fe90c34d8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:internet-gateway/igw-0e776296e69b0534c",
            "id": "igw-0e776296e69b0534c",
            "owner_id": "525017980305",
            "tags": {
              "Name": "test-eks",
              "kubernetes.io/clustereks_innfi": "shared"
            },
            "vpc_id": "vpc-0214a69cfe492c449"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c766257ea564690e",
            "owner_id": "525017980305",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e776296e69b0534c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-eks-public-ap-northeast-2a",
              "kubernetes.io/clustereks_innfi": "shared"
            },
            "vpc_id": "vpc-0214a69cfe492c449"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a296e6048f02febb",
            "owner_id": "525017980305",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e776296e69b0534c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-eks-public-ap-northeast-2c",
              "kubernetes.io/clustereks_innfi": "shared"
            },
            "vpc_id": "vpc-0214a69cfe492c449"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c16b88b3adc4fb37",
            "route_table_id": "rtb-0c766257ea564690e",
            "subnet_id": "subnet-0294eff9b050c2aee"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5c2551b0648381f",
            "route_table_id": "rtb-0a296e6048f02febb",
            "subnet_id": "subnet-08ec94a7f965bd07a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:security-group/sg-0dad6af17de7a1c73",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0dad6af17de7a1c73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20220325112451582300000001",
            "name_prefix": null,
            "owner_id": "525017980305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-eks-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0214a69cfe492c449"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3338995972",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dad6af17de7a1c73",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:subnet/subnet-0294eff9b050c2aee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0294eff9b050c2aee",
            "map_public_ip_on_launch": true,
            "owner_id": "525017980305",
            "tags": {
              "Name": "test-eks-public-ap-northeast-2a",
              "kubernetes.io/clustereks_innfi": "shared"
            },
            "vpc_id": "vpc-0214a69cfe492c449"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:subnet/subnet-08ec94a7f965bd07a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08ec94a7f965bd07a",
            "map_public_ip_on_launch": true,
            "owner_id": "525017980305",
            "tags": {
              "Name": "test-eks-public-ap-northeast-2c",
              "kubernetes.io/clustereks_innfi": "shared"
            },
            "vpc_id": "vpc-0214a69cfe492c449"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:vpc/vpc-0214a69cfe492c449",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff8c5e01d4a71f0f",
            "default_route_table_id": "rtb-03cc44ec8133fa373",
            "default_security_group_id": "sg-0b43355144c841883",
            "dhcp_options_id": "dopt-833febe8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0214a69cfe492c449",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03cc44ec8133fa373",
            "owner_id": "525017980305",
            "tags": {
              "Name": "test-eks",
              "kubernetes.io/clustereks_innfi": "shared"
            }
          }
        }
      ]
    }
  ]
}